Initial debugging version for LDC2114.

--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,10 @@
-name=FDC2214
-version=1.1
-author=Harijs Zablockis
-maintainer=Harijs Zablockis
-sentence=TI FDC2214 capacitative sensor library 
-paragraph=Library to support Texas instruments capacitative sensors. Supports FDC2112, FDC2114, FSC2212 and FDC2214 chips.
+name=LDC2114
+version=0.1
+author=Matthew Chin
+maintainer=Matthew Chin
+sentence=TI LDC2114 resonant sensor library 
+paragraph=Library to support Texas Instruments LDC2114 resonant inductive/capacitive sensor.
 category=Sensors
-url=https://github.com/zharijs/FDC2214
+url=https://github.com/mattchin35/LDC2114
 architectures=avr,esp8266
-includes=FDC2214.h
+includes=LDC2114.h
